--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempore asperiores unde dolorem. Dignissimos quod ullam perspiciatis provident quasi at error corporis neque. Magni quae quia enim iusto quis exercitationem!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI-UX">
         </div>
     </section>
     <section class="event event--data-science">
@@ -72,7 +72,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempore asperiores unde dolorem. Dignissimos quod ullam perspiciatis provident quasi at error corporis neque. Magni quae quia enim iusto quis exercitationem!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data-science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -85,7 +85,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempore asperiores unde dolorem. Dignissimos quod ullam perspiciatis provident quasi at error corporis neque. Magni quae quia enim iusto quis exercitationem!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
         </div>
     </section>
 
